--- a/src/containers/presentation/Presentation.module.css
+++ b/src/containers/presentation/Presentation.module.css
@@ -3,15 +3,32 @@
 }
 
 .container {
+	margin: 40px 0 0 0;
 	display: grid;
-	grid-template-rows: 90% 1fr;
-	grid-template-columns: 50% 50%;
+	grid-template-rows: 40% 40%;
+	grid-template-columns: 90%;
 	align-items: center;
 	position: relative;
+	text-align: center;
+	justify-content: center;
+	align-items: flex-start;
+	gap: 30px;
+}
+
+.descriptionSection {
+	position: relative;
+	right: 50px;
+	opacity: 0;
+	transition: all 0.7s ease;
+}
+
+.descriptionSection.visible {
+	right: 0;
+	opacity: 1;
 }
 
 .title {
-	font-size: 48px;
+	font-size: 36px;
 	font-weight: 600;
 	color: transparent;
 	background: -webkit-linear-gradient(
@@ -28,30 +45,34 @@
 	animation: gradient 25s linear infinite;
 }
 
-.capital {
-	/* color: transparent;
-	background-image: linear-gradient(40deg, #009830, #a6d79a);
-	background-clip: text;
-	-webkit-background-clip: text; */
-}
-
 .subtitle {
-	font-size: 18px;
-	width: 90%;
+	font-size: 16px;
+	width: 100%;
 	padding: 16px 0 0 0;
 	font-weight: 400;
 }
 
 .imageSection {
+	position: relative;
+	left: 50px;
+	opacity: 0;
+	transition: all 0.6s ease-in-out;
+	transition-delay: 0.2s;
+	grid-area: 1;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
+.imageSection.visible {
+	opacity: 1;
+	left: 0;
+}
+
 .imageContainer {
 	position: relative;
 	width: 80%;
-	max-width: 382px;
+	max-width: 300px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -89,5 +110,42 @@
 
 	100% {
 		background-position: 0 50%;
+	}
+}
+
+@media screen and (min-width: 670px) {
+	.subtitle {
+		font-size: 18px;
+	}
+
+	.title {
+		font-size: 48px;
+	}
+}
+
+@media screen and (min-width: 800px) {
+	.container {
+		margin: 0;
+		grid-template-rows: 90% 1fr;
+		grid-template-columns: 50% 50%;
+		align-items: center;
+		text-align: left;
+	}
+
+	.subtitle {
+		width: 90%;
+		font-size: 18px;
+	}
+
+	.title {
+		font-size: 48px;
+	}
+
+	.imageContainer {
+		max-width: 382px;
+	}
+
+	.imageSection {
+		grid-area: 1 / 2;
 	}
 }
