--- a/src/components/skillInfo/SkillInfo.module.css
+++ b/src/components/skillInfo/SkillInfo.module.css
@@ -16,7 +16,7 @@
 }
 
 .title {
-	font-size: 35px;
+	font-size: 30px;
 	text-align: center;
 	text-shadow: 2px 2px 0px #000;
 }
@@ -24,6 +24,21 @@
 .description {
 	width: 90%;
 	text-align: center;
-	font-size: 18px;
-	padding: 40px 0 0 0;
+	font-size: 17px;
+	padding: 20px 0 0 0;
+}
+
+@media screen and (min-width: 700px) {
+	.title {
+		font-size: 40px;
+		text-align: center;
+		text-shadow: 2px 2px 0px #000;
+	}
+
+	.description {
+		width: 90%;
+		text-align: center;
+		font-size: 18px;
+		padding: 40px 0 0 0;
+	}
 }
