--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ body {
 
 .section {
 	box-sizing: content-box;
-	padding: 30px 0;
+	/*padding: 30px 0;*/
 	min-height: 100vh;
 	display: flex;
 	justify-content: center;
@@ -38,13 +38,20 @@ body {
 }
 
 .section-title {
-	font-size: 45px;
+	font-size: 40px;
 	text-align: center;
-	padding: 50px 0 0 0;
+	padding: 50px 0 40px 0;
 }
 
 html,
 body {
 	max-width: 100vw;
 	overflow-x: hidden;
+}
+
+@media screen and (min-width: 1000px) {
+	.section-title {
+		font-size: 47px;
+		padding: 50px 0 0 0;
+	}
 }
