--- a/src/components/project/Project.module.css
+++ b/src/components/project/Project.module.css
@@ -9,9 +9,19 @@
 	position: relative;
 	display: flex;
 	justify-content: center;
-	cursor: pointer;
 	border: solid 1px transparent;
-	transition: border 0.4s;
+	opacity: 0;
+	position: relative;
+	top: 100px;
+	transition-property: border, opacity, top;
+	transition-duration: 0.4s, 0.5s, 0.4s;
+	transition-delay: 0s, var(--delay), var(--delay);
+	transition-timing-function: linear, ease, ease;
+}
+
+.container.visible {
+	top: 0;
+	opacity: 1;
 }
 
 .container:hover {
@@ -35,11 +45,52 @@
 .image {
 	width: auto;
 	height: 100%;
-	transition: height 0.3s ease;
+	transition: height 0.3s;
 }
 
 .container:hover .image {
 	height: 110%;
+}
+
+.links {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #0007;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	opacity: 0;
+	transition: opacity 0.3s ease;
+}
+
+.container:hover .links {
+	opacity: 1;
+}
+
+.linksContent {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	width: 50%;
+}
+
+.linksButton {
+	color: #fff;
+	background-color: transparent;
+	border: solid 1px #fff;
+	padding: 7px;
+	border-radius: 10px;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	cursor: pointer;
+}
+
+.linksButton:hover {
+	color: #000;
+	background-color: #fff;
 }
 
 .content {
