--- a/src/containers/listOfProjects/ListOfProjects.module.css
+++ b/src/containers/listOfProjects/ListOfProjects.module.css
@@ -1,7 +1,14 @@
 .container {
-	margin: 210px 0 0 0;
+	margin: 190px 0 0 0;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	flex-wrap: wrap;
 	gap: 180px 20px;
+}
+
+@media screen and (min-width: 800px) {
+	.container {
+		margin: 210px 0 0 0;
+		justify-content: space-around;
+	}
 }
